--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -9,14 +9,23 @@
 
     <div class="clock">
       <div class="clock-face">
+        <div id="XII-top"><h1>XII</h1></div>
+        <div id="III-right"><h1>III</h1></div>
+        <div id="VI-bottom"><h1>VI</h1></div>
+        <div id="IX-left"><h1>IX</h1></div>
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
+        <div class="hand second-hand" id="red"></div>
       </div>
     </div>
 
 
   <style>
+    h1{
+      color: white;
+      font-size: 20px;
+    }
+
     html {
       background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);
       background-size: cover;
@@ -37,14 +46,14 @@
     .clock {
       width: 30rem;
       height: 30rem;
-      border: 20px solid white;
+      border: 20px solid black;
       border-radius: 50%;
       margin: 50px auto;
       position: relative;
       padding: 2rem;
       box-shadow:
         0 0 0 4px rgba(0,0,0,0.1),
-        inset 0 0 0 3px #EFEFEF,
+        inset 0 0 0 3px #494949,
         inset 0 0 10px black,
         0 0 10px rgba(0,0,0,0.2);
     }
@@ -62,13 +71,68 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      /* transition: all 0.05s; */
+      transition-timing-function: cubic-bezier(0, 0.44, 0, 1.57);
+    }
+
+    #red{
+      background: red;
+    }
+
+    #XII-top{
+      position:relative;
+      top: -15px;
+    }
+
+    #III-right{
+      position:relative;
+      top: 100px;
+      left: 150px;
+    }
+
+    #VI-bottom{
+      position:relative;
+      top: 200px;
+    }
+
+    #IX-left{
+      position:relative;
+      left: -145px;
+      top: 25px;
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    function setDate(){
+      // get the current time
+      const now = new Date();
+      // get the seconds from the current time
+      const seconds = now.getSeconds();
+      // get the degree of the seconds on the clock face
+      // seconds/60 = the percent of current seconds/60 seconds
+      // *360 to get the degree
+      const secondsDegrees = ((seconds/60) * 360) + 90;
+      // make the second hand rotate by the degrees calculated from the seconds
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
+      const minutes = now.getMinutes();
+      const minDegrees = ((minutes/60)*360) + 90;
+      minHand.style.transform = `rotate(${minDegrees}deg)`
+
+      const hour = now.getHours();
+      const hourDegrees = ((hour/12)*360) + 90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`
+    }
+    // get the second hand to rotate every second by setting an interval
+    // it runs every second (every 1000ms)
+    setInterval(setDate, 1000);
   </script>
 </body>
 </html>
