--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,48 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    // const oldEnough = people.some(person => {
+    //   const yearNow = (new Date()).getFullYear();
+    //   if(yearNow - person.year >= 19) {
+    //     return true;
+    //   }
+    // });
+
+    // refactored //
+    const oldEnough = people.some(person => (new Date()).getFullYear() - person.year >= 19 )
+    console.log({oldEnough})
     // Array.prototype.every() // is everyone 19 or older?
+    // const isOld = people.every(person => {
+    //   const yearNow = (new Date()).getFullYear();
+    //   if(yearNow - person.year >= 19) {
+    //     return true;
+    //   }
+    // });
+
+    // refactored //
+    const isOld = people.every(person => (new Date()).getFullYear() - person.year >= 19 )
+    console.log({isOld})
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    // const comment = comments.find(comment => {
+    //   if (comment.id === 823423) {
+    //     return true;
+    //   }
+    // });
+
+    // refactored //
+    const comment = comments.find(comment => comment.id === 823423 ) //implicit return because it will return true/false
+    console.log({comment})
+
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
+    const index = comments.findIndex(comment => comment.id === 823423 )
+    console.log({index})
     // delete the comment with the ID of 823423
+    comments.splice(index,1);
 
   </script>
 </body>
