--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,56 @@
     }
 
     // Regular
+    console.log('hi');
 
     // Interpolated
+    console.log('hello I am a %s string', '⭐️')
 
     // Styled
+    console.log('%c Good text', 'font-size:30px; background: red')
 
     // warning!
+    console.warn('NOOOO')
 
     // Error :|
+    console.error('ErroR')
 
     // Info
+    console.info('crocodiles eat 3-4 people a year')
 
-    // Testing
+    // Testing - will only show up if it's wrong
+    const p = document.querySelector('p');
 
-    // clearing
+    console.assert(p.classList.contains('ouch'), 'that is wrong')
+
+    // clearing - clears console
+    console.clear()
 
     // Viewing DOM Elements
-
+    console.log(p)
+    console.dir(p) // gives you all the properties and methods that live on the element
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`)
+      console.log(`this is ${dog.name}`)
+      console.log(`${dog.name} is ${dog.age} years old`)
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`)
+      console.groupEnd(`${dog.name}`)
+    })
 
-    // counting
+    // counting - counts how many times something has run
+    console.count('Steve')
+    console.count('Steve')
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/vschang')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
+
 
   </script>
 </body>
